# vsomeip

./: .gitignore  Android.bp  CHANGES  CMakeLists.txt  LICENSE_boost  README.md  conf  exportmap.gcc  vsomeip.pc.in  vsomeip.xml  vsomeip3.pc.in  vsomeip3Config.cmake.in  vsomeipConfig.cmake.in  vsomeipConfigVersion.cmake.in
config/: vsomeip-local-security.json  vsomeip-local-tcp-client.json  vsomeip-local-tcp-service.json  vsomeip-local-tracing.json  vsomeip-local.json  vsomeip-tcp-client-security.json  vsomeip-tcp-client.json  vsomeip-tcp-service-security.json  vsomeip-tcp-service.json  vsomeip-udp-client-security.json  vsomeip-udp-client.json  vsomeip-udp-service-security.json  vsomeip-udp-service.json  vsomeip.json
documentation/: doxygen.in  multicast.txt  todo.txt  vsomeipUserGuide
examples/: CMakeLists.txt  notify-sample.cpp  readme.txt  request-sample.cpp  response-sample.cpp  sample-ids.hpp  subscribe-sample.cpp
examples/basic/: CMakeLists.txt  basic-client.cpp  basic-client.json  basic-service-sd.json  basic-service.cpp  basic-service.json  basic.json
examples/event_notification/: CMakeLists.txt  notify-service.cpp  notify-service.json  subscribe-client.cpp
examples/getter-setter/: CMakeLists.txt  notify-service.cpp  notify-service.json  subcribe-client.json  subscribe-client.cpp
examples/getter_setter/: CMakeLists.txt  getset-client.cpp  getset-client.json  getset-service.cpp  getset-service.json  notify-service.cpp  notify-service.json  subcribe-client.json  subscribe-client-sd.json  subscribe-client.cpp  subscribe-client.json
examples/hello_world/: Android.bp  CMakeLists.txt  hello_world_client.hpp  hello_world_client_main.cpp  hello_world_service.hpp  hello_world_service_main.cpp  helloworld-local.json  readme  readme_android
examples/mbddr_example/: CMakeLists.txt  main.c  main.h  vsomeipClientRequiredWrapper.h  vsomeipClientWrapper.cpp  vsomeipClientWrapper.h  vsomeipCommonRequiredWrapper.h  vsomeipCommonWrapper.cpp  vsomeipCommonWrapper.h
examples/multi_service/: CMakeLists.txt  client.cpp  client.json  server.cpp  server.json
examples/routingmanagerd/: CMakeLists.txt  routingmanagerd.cpp
interface/vsomeip/: application.hpp  constants.hpp  defines.hpp  enumeration_types.hpp  error.hpp  export.hpp  function_types.hpp  handler.hpp  message.hpp  message_base.hpp  payload.hpp  plugin.hpp  primitive_types.hpp  runtime.hpp  trace.hpp  vsomeip.hpp
test/: CMakeLists.txt  readme.txt
test/application_tests/: application_test.cpp  application_test_availability.cpp  application_test_availability_starter.sh  application_test_client.cpp  application_test_client_availability.cpp  (+7 more)
tools/: CMakeLists.txt  vsomeip_ctrl.cpp
(+609 files in other folders)
